aga, something is going betar

--- a/template/page/index.json5
+++ b/template/page/index.json5
@@ -26,12 +26,11 @@
           {
             name: 'HelloBlock',
             data: {
-              text: 'property value'
+              text: '=theBlock.val'
             }
           },
           { name: 'Layout/Vertical/Vertical',
             data: {
-              text: 'property value',
               blocks: [
                 {
                   name: 'HelloBlock',
