--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cms-tapir",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "dependencies": {
     "@babel/helper-plugin-utils": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.8.3",
@@ -18,7 +18,17 @@
     "observable-sequence": "^0.0.4",
     "recursive-watch": "^1.1.4",
     "terser": "^4.6.3",
-    "yargs": "^15.1.0"
+    "yargs": "^15.1.0",
+    "compression": "^1.7.4",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-transform-modules-amd": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.12.11",
+    "@babel/plugin-transform-typescript": "^7.8.3",
+    "@babel/preset-env": "*",
+    "@babel/template": "^7.8.3",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-preset-es2015": "*",
+    "core-js": "^3.6.4"
   },
   "scripts": {
     "start": "node index.js",
@@ -28,18 +38,10 @@
     "webpack": "webpack"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-transform-modules-amd": "^7.8.3",
-    "@babel/plugin-transform-react-jsx": "^7.12.11",
-    "@babel/plugin-transform-typescript": "^7.8.3",
-    "@babel/preset-env": "*",
-    "@babel/template": "^7.8.3",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-es2015": "*",
+
     "browserify": "*",
     "chai": "^4.2.0",
-    "compression": "^1.7.4",
-    "core-js": "^3.6.4",
+
     "gulp": "^4.0.2",
     "gulp-babel": "*",
     "gulp-plumber": "*",
