--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
   "name": "cms-tapir",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "dependencies": {
+    "@babel/core": "^7.8.3",
     "@babel/helper-plugin-utils": "^7.10.4",
+    "@babel/plugin-transform-modules-amd": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.12.11",
     "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/plugin-transform-typescript": "^7.8.3",
+    "@babel/preset-env": "*",
+    "@babel/template": "^7.8.3",
     "@editorjs/editorjs": "^2.19.0",
     "@editorjs/header": "^2.6.1",
     "@editorjs/list": "^1.6.1",
     "api-tapir": "*",
     "babel-plugin-extract-import-names": "^1.6.21",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-preset-es2015": "*",
+    "compression": "^1.7.4",
+    "core-js": "^3.6.4",
     "csv-parser": "*",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "json5": "^2.1.3",
     "node-async-router": "^0.0.2",
+    "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
     "observable-sequence": "^0.0.4",
     "recursive-watch": "^1.1.4",
     "terser": "^4.6.3",
-    "yargs": "^15.1.0",
-    "compression": "^1.7.4",
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-transform-modules-amd": "^7.8.3",
-    "@babel/plugin-transform-react-jsx": "^7.12.11",
-    "@babel/plugin-transform-typescript": "^7.8.3",
-    "@babel/preset-env": "*",
-    "@babel/template": "^7.8.3",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-es2015": "*",
-    "core-js": "^3.6.4"
+    "yargs": "^15.1.0"
   },
   "scripts": {
     "start": "node index.js",
@@ -36,10 +37,8 @@
     "build": "node build.js"
   },
   "devDependencies": {
-
     "browserify": "*",
     "chai": "^4.2.0",
-
     "gulp": "^4.0.2",
     "gulp-babel": "*",
     "gulp-plumber": "*",
