--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cms-tapir",
-  "version": "0.3.33",
+  "version": "0.3.35",
   "dependencies": {
     "@babel/core": "^7.8.3",
     "@babel/helper-plugin-utils": "^7.10.4",
@@ -25,9 +25,9 @@
     "json5": "^2.1.3",
     "node-async-router": "^0.0.2",
     "node-fetch": "^2.6.1",
-    "node-sass": "^5.0.0",
     "observable-sequence": "^0.0.4",
     "recursive-watch": "^1.1.4",
+    "sass": "^1.62.1",
     "terser": "^4.6.3",
     "yargs": "^15.1.0"
   },
