--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@editorjs/editorjs": "^2.19.0",
     "@editorjs/header": "^2.6.1",
     "@editorjs/list": "^1.6.1",
-    "api-tapir": "^0.15.5",
+    "api-tapir": "github:supaflyENJOY/Tapir",
     "babel-plugin-extract-import-names": "^1.6.21",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-es2015": "*",
