--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@editorjs/editorjs": "^2.19.0",
     "@editorjs/header": "^2.6.1",
     "@editorjs/list": "^1.6.1",
-    "api-tapir": "github:supaflyENJOY/Tapir#71776a06f065e3b9d54a059cae8e80a1e8631e4e",
     "babel-plugin-extract-import-names": "^1.6.21",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-es2015": "*",
@@ -23,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "json5": "^2.1.3",
+    "lrl-api-tapir": "^0.15.5",
     "node-async-router": "^0.0.2",
     "node-fetch": "^2.6.1",
     "observable-sequence": "^0.0.4",
